Update: updated the entire project Added new image for covid. Little of UI tweaks here and there.

--- a/src/components/Cards/Card/Card.module.css
+++ b/src/components/Cards/Card/Card.module.css
@@ -1,5 +1,10 @@
 .card{
     margin: 0 2% !important;
+    transition: transform .4s; 
+}
+
+.card:hover{
+    transform: scale(1.2);
 }
 
 @media only screen and (max-width: 770px){
