--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -6,13 +6,16 @@
 }
 
 .infected{
-    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+    /* border-bottom: 10px solid rgba(0, 0, 255, 0.5); */
+    background-color: rgba(0, 0, 255, 0.5);
 }
 
 .recovered{
-    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+    /* border-bottom: 10px solid rgba(0, 255, 0, 0.5); */
+    background-color: rgba(0, 255, 0, 0.5);
 }
 
 .deaths{
-    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+    /* border-bottom: 10px solid rgba(255, 0, 0, 0.5); */
+    background-color: rgba(255, 0, 0, 0.5)
 }
